[package]
name = "classpad_string"
version = "0.2.1"
authors = ["Eisverygoodletter"]
edition = "2021"
description = "handle XCP files and strings for the Classpad fx-400"
readme = "README.md"
repository = "https://github.com/Eisverygoodletter/classpad_string"
license = "MIT"
keywords = ["parser"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bidir-map = "1.0.0"
lazy_static = "1.4.0"
